# nestargs

./: .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  Makefile  README.ja.md  README.md  pyproject.toml  pytest.ini  setup.cfg
.github/: dependabot.yml  release.yml
.github/workflows/: create-draft-release.yml  draft-release.yml  publish.yml  python-tests.yml  release-drafter.yml  test.yml  upload-python-package.yml
nestargs/: __init__.py  decorators.py  meta.py  parser.py
src/nestargs/: __init__.py  parser.py
tests/: test_decorators.py  test_init.py  test_meta.py  test_nestargs.py  test_parser.py
tests/nestargs/: test_parser.py
