[tool.poetry]
name = "nestargs"
version = "0.5.0"
description = "Nested arguments parser"
authors = ["Takahiro Yano <speg03@gmail.com>"]

readme = "README.md"
license = "MIT"

homepage = "https://github.com/speg03/nestargs"
repository = "https://github.com/speg03/nestargs"

keywords = ["argparse", "arguments", "parser", "cli", "command", "line", "interface"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.5"
importlib-metadata = { version = ">=1.5", python = "<3.8" }

[tool.poetry.dev-dependencies]
pytest = ">=6.0"
pytest-cov = ">=2.8"
black = { version = ">=19.10b0", python = "^3.6" }

[tool.pytest.ini_options]
addopts = "--cov=nestargs --cov-report=term-missing --cov-report=xml"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
