[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "nestargs"
description = "Nested arguments parser"
authors = [{ name = "Takahiro Yano", email = "speg03@gmail.com" }]

readme = "README.md"
license = "MIT"

requires-python = ">=3.8"

keywords = [
    "argparse",
    "arguments",
    "parser",
    "cli",
    "command",
    "line",
    "interface",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dynamic = ["version"]

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]

[project.urls]
Repository = "https://github.com/speg03/nestargs"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/nestargs/_version.py"

[tool.pytest.ini_options]
addopts = "--cov=nestargs --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
omit = ["src/nestargs/_version.py"]
